kubernetes-labs/07-ingress-tls/manifests/cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  labels:
    app.kubernetes.io/name: cache
    app.kubernetes.io/part-of: k8s-sre-course
    course.lab: "07"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: cache
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cache
        app.kubernetes.io/part-of: k8s-sre-course
        course.lab: "07"
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: cache-vol
              mountPath: /var/cache/nginx
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 1
            periodSeconds: 2
      volumes:
        - name: conf
          configMap:
            name: cache-nginx-conf
        - name: cache-vol
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: cache
  labels:
    app.kubernetes.io/name: cache
    app.kubernetes.io/part-of: k8s-sre-course
    course.lab: "07"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cache
  ports:
    - name: http
      port: 80
      targetPort: http
